[tool.poetry]
name = "fwatch"
version = "0.1.0"
description = "A very simple file watcher."
authors = ["Wolf Honore <wolfhonore@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/whonore/fwatch"

[tool.poetry.scripts]
fwatch = "fwatch.fwatch:main"

[tool.poetry.dependencies]
python = "^3.8.1"
pathspec = "^0.10.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
flake8 = "^6.0.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
